@@ -1,6 +1,8 @@
 6.5:
 ----
 
+Added variables for pre-entry CSM acceleration for unmanned flights (though currently not wired up).
+Updated timings in Apollo 4 scenario to match those in the Mission Report document. Though they were already close!
 Fixed passing of Realism value and audio language from CSM to LEM.
 Added Rmaia's AGC 2.0 changes (e.g. new LEM ascent autopilot)
 Added roughly correct masses for different payloads.
@@ -9,6 +11,7 @@ Added support for post-splashdown audio (e.g. Presidential congratulations).
 Fixed compiler warning in saturn1b.cpp.
 Updated CSM AGC banksums to match real data from Yaagc. Also, PRO key steps through sums, as well as VERB 33.
 Launch apogee/perigee display now shows negative perigee, rather than zero, as per real AGC. Also apogee and perigee in 1/10 km.
+New CSM control panels.
 
 6.4:
 ----
